updating documentation with FIXimulator example

--- a/docs/src/FixSharedLibrary.tex
+++ b/docs/src/FixSharedLibrary.tex
@@ -5,8 +5,8 @@
 \usepackage{pdftexcmds}
 \usepackage{minted}
 \usepackage{verbatim}
-
 \usepackage{etoolbox}
+\usepackage{graphicx}
 
 \usemintedstyle{default}
 
