--- a/docs/src/Introduction.tex
+++ b/docs/src/Introduction.tex
@@ -1,17 +1,16 @@
 \chapter{Overview}
 
+This product includes software developed by quickfixengine.org (\url{http://www.quickfixengine.org/}).
+
 \section{Features}
 
 This FIX engine provides many standard features including:
 
 \begin{description}
-	\item[Easy KDB+ integration] - Getting access to a full suite of FIX engine features is as simple as loading a library into your KDB+ application.
+	\item[Easy KDB+ integration] - Getting access to a full suite of FIX engine features is as simple as loading a shared library into your KDB+ application.
 	\item[Supports Standard FIX Versions] - The FIX engine supports all of the FIX standards out of the box and even allows you to use multiple different message formats at the same time.
-	\item[Message Validation] - All messages that are received by the FIX engine are validated against a specification before being processed. This ensures that clients use the correct format and it simplifies your business logic.
-	\item[Custom Message Formats] - The engine supports custom specifications via XML. The specification format enables automatic message validation.
-	\item[Guaranteed Delivery] -
-	\item[Message Replay] - The engine support message replaying and .
-	\item[Logging] - 
+	\item[Message Validation] - All messages that are received by the FIX engine are validated against a specification before being processed to help simplify your business logic.
+	\item[Custom Message Formats] - The engine supports custom specifications via a simple XML format based on the underlying QuickFIX library.
+	\item[Guaranteed Delivery] - Messages are tracked alongside sequence numbers, so if a client misses a message, it can always be recovered.
 	\item[Runs on Linux \& Windows] - The adapter is designed so that it will easily build \& run on both Windows and Linux.
-	\item[Flexible API] -
 \end{description}
